feat(io): add allocation-backend SPI for ByteBufferPool
Make ByteBufferPool's allocation backend pluggable through a ServiceLoader
SPI, ByteBufferAllocator, with allocateDirect/allocateHeap/free. The
default pool discovers a provider via getDefault() and falls back to a
built-in backend (direct via allocateDirect + eager Unsafe.invokeCleaner
release, heap via allocate) when none is registered, so standalone use on
Java 17 is unchanged. The public API stays the same.

allocate and free are a mandatory pair: a provider owns both the
allocation and the release of every buffer it hands out, because the
built-in release path uses invokeCleaner, valid only on a root direct
buffer. A provider returning buffers from another mechanism must supply a
matching free rather than inherit the built-in one.

The allocator feeds the existing BufferQueue factory/evictionListener
seam. DirectByteBufferCleaner moves to its own file and is used by the
built-in backend.

The test-only provider registration is excluded from the test-jar so
sibling modules that consume tileverse-storage-core's test-jar do not
discover it.

on-behalf-of: @multiversio <info@multivers.io>